# mat-sim-utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
ganson_utils/: structure.py
ganson_utils/scripts/: show_mem_alloc.py  structure_converter.py  submit_jobs.py
mat_sim_apps/: bin.py  fileio.py  struct.py  structure.py  utils.py
mat_sim_apps/scripts/: cif_to_poscar.py  clean_directory_to_resume_relax.py  csv_to_latex.py  job_scripter.py  keep_resource.py  relax_by_vasp.py  structure_converter.py
mat_sim_utils/: bump_version.py  fileio.py
mat_sim_utils/scripts/: job_scripter.py  keep_resource.py  relax_by_vasp.py  reproduce_poscar_from_vasprun_xml.py  show_mem_alloc.py  structure_converter.py
tests/: conftest.py  test_csv_to_latex.py  test_structure.py
tests/data/inputs/Fe/structures/: structure-042  structure-049  structure-091
tests/data/outputs/seko/: poscar-042  poscar-049  poscar-091
tests/data/outputs/structure_converter/: poscar-042  poscar-049  poscar-091
utils/: structure.py
utils/scripts/: structure_converter.py  submit_jobs.py
